[package]
name = "reliabletcp-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
bytes = "1.2.1"
async-trait = "0.1.57"
chrono = "0.4"
futures = "0.3.24"
crc8-rs = "1.1.1"
log = "0.4.17"