[package]
name = "reliabletcp-server"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tokio-stream = "0.1.10"
async-trait = "0.1.57"
reliabletcp-common = {path = "../reliabletcp-common"}
bytes = "1.2.1"
futures = { version = "0.3", default-features = false }
log = "0.4.17"